--- a/supervisor/ui/status.html
+++ b/supervisor/ui/status.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:meld="http://www.plope.com/software/meld3">
 <head>
-  <title>Supervisor Status</title>
+  <title>RobusTest Status</title>
   <link href="stylesheets/supervisor.css" rel="stylesheet" type="text/css" />
   <link href="images/icon.png" rel="icon" type="image/png" />
 </head>
