--- a/supervisor/ui/tail.html
+++ b/supervisor/ui/tail.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:meld="http://www.plope.com/software/meld3">
 <head>
-  <title meld:id="title">Supervisor Status</title>
+  <title meld:id="title">RobusTest Status</title>
 </head>
 <body>
 
